--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression": "^1.7.4",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "webpack": "^4.41.2",
     "webpack-node-externals": "^1.7.2"
   },
