--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "build": "npx webpack",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "watch": "node ./bin/dev-watch",
+    "dev": "npm run watch"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +20,12 @@
     "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
+    "config": "^3.2.4",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^0.20.1",
     "morgan": "^1.9.1",
     "webpack": "^4.41.2",
     "webpack-node-externals": "^1.7.2"
