--- a/package.json
+++ b/package.json
@@ -5,32 +5,207 @@
   "main": "app.js",
   "scripts": {
     "build": "npx webpack",
-    "start": "node ./dist/app.js",
+    "start": "node ./dist/server.js",
     "watch": "node ./bin/dev-watch",
     "dev": "npm run watch"
   },
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "*.scss": [
+      "stylelint --fix",
+      "git add"
+    ]
+  },
+  "engines": {
+    "node": "~8.11"
+  },
   "dependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.19.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "abort-controller": "^3.0.0",
+    "aws-sdk": "^2.407.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "bull": "^3.4.2",
+    "bull-arena": "^2.4.3",
     "compression": "^1.7.4",
-    "config": "^3.2.4",
     "connect-flash": "^0.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "knex": "^0.20.1",
-    "morgan": "^1.9.1",
-    "webpack": "^4.41.2",
-    "webpack-node-externals": "^1.7.2"
+    "cookie-parser": "^1.4.3",
+    "core-js": "3",
+    "cron": "^1.4.1",
+    "crypto": "^1.0.1",
+    "debug": "^2.6.9",
+    "elasticsearch": "^14.0.0",
+    "email-validator": "^2.0.4",
+    "express": "^4.15.5",
+    "express-jwt": "^5.3.1",
+    "geoip-lite": "^1.3.6",
+    "https-proxy-agent": "^2.2.1",
+    "jwks-rsa": "^1.4.0",
+    "morgan": "^1.9.0",
+    "node-sass-glob-importer": "^5.1.3",
+    "node-ses": "^2.1.0",
+    "passport-custom": "^1.0.5",
+    "passport-http": "^0.3.0",
+    "password-generator": "^2.2.0",
+    "pug": "^2.0.0-rc.4",
+    "react-autocomplete": "^1.8.1",
+    "react-csv-reader": "^1.1.0",
+    "react-dates": "^18.1.1",
+    "react-favicon": "^0.0.16",
+    "react-ga": "^2.5.3",
+    "react-pdf": "^3.0.6",
+    "react-safe": "^1.1.1",
+    "react-slick": "^0.24.0",
+    "react-tabs-redux": "^4.0.0",
+    "react-vis": "^1.11.6",
+    "redlock": "^3.1.2",
+    "redux-form": "^7.2.0",
+    "serve-favicon": "^2.4.5",
+    "slick-carousel": "^1.8.1",
+    "string-similarity": "^3.0.0",
+    "unescape": "^1.0.1",
+    "yarn-run-all": "^3.1.1",
+    "zipcodes": "^7.0.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.10"
+    "@babel/cli": "^7.0.0-beta.36",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
+    "@babel/polyfill": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "@babel/preset-react": "^7.0.0-beta.36",
+    "autoprefixer": "^7.2.1",
+    "babel-core": "^7.0.0-0",
+    "babel-eslint": "^8.0.3",
+    "babel-jest": "^22.0.4",
+    "babel-loader": "8.0.0-beta.0",
+    "bcryptjs": "^2.4.3",
+    "btoa": "^1.1.2",
+    "classnames": "^2.2.5",
+    "commander": "^2.14.1",
+    "config": "^1.29.2",
+    "connect-redis": "^3.3.3",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.7",
+    "csv-parse": "^2.0.0",
+    "csvjson": "^5.1.0",
+    "dotenv": "^6.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "eslint": "^4.12.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-jest": "^21.15.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.5.1",
+    "express-session": "^1.15.6",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "faker": "^4.1.0",
+    "file-loader": "^1.1.6",
+    "history": "^4.7.2",
+    "husky": "^0.14.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^22.0.4",
+    "jest-fetch-mock": "^1.4.0",
+    "jest-junit": "^3.3.0",
+    "js-cookie": "^2.2.0",
+    "jsonwebtoken": "^8.1.0",
+    "jwk-to-pem": "^2.0.0",
+    "knex": "^0.14.2",
+    "lint-staged": "^6.0.0",
+    "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
+    "node-sass": "^4.9.0",
+    "parse-address-string": "^0.0.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.4.0",
+    "passport-unique-token": "^0.1.4",
+    "pg": "^7.4.1",
+    "pg-query-stream": "^1.1.1",
+    "postcss": "^6.0.16",
+    "postcss-loader": "^2.0.9",
+    "postcss-sass": "^0.2.0",
+    "prettier": "1.9.0",
+    "prop-types": "^15.6.0",
+    "pug-loader": "^2.3.0",
+    "query-string": "^5.0.1",
+    "raf": "^3.4.0",
+    "ramda": "^0.25.0",
+    "react": "^16.5",
+    "react-click-outside": "^3.0.1",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-connect": "^7.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.3.0",
+    "redux-thunk": "^2.2.0",
+    "resolve-url-loader": "^2.2.1",
+    "rimraf": "^2.6.2",
+    "rosie": "^1.6.0",
+    "sass-loader": "^6.0.6",
+    "simple-encryptor": "^1.1.1",
+    "source-map-support": "^0.5.0",
+    "style-loader": "^0.20.2",
+    "stylelint": "^8.3.1",
+    "stylelint-config-recommended-scss": "^3.0.0",
+    "stylelint-config-standard": "^18.0.0",
+    "stylelint-order": "^0.8.0",
+    "stylelint-scss": "^2.2.0",
+    "supertest": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^1.1.5",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.3",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0",
+    "winston": "^2.4.0",
+    "xml2js": "^0.4.19"
+  },
+  "browserslist": [
+    "IE >= 11",
+    "last 1 versions"
+  ],
+  "jest": {
+    "automock": false,
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "pug"
+    ],
+    "moduleDirectories": [
+      "<rootDir>/src",
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|scss)$": "<rootDir>/src/__tests__/support/fileMock.js",
+      "^ui/store/actions/runSearch(.*)$": "<rootDir>/src/ui/store/actions/runSearch.client.js"
+    },
+    "transform": {
+      "^.+\\.pug$": "<rootDir>/src/__tests__/support/pug-jest-loader",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "__tests__/support/"
+    ],
+    "setupFiles": [
+      "./config/dotenv.js",
+      "./src/__tests__/support/setupFetch.js"
+    ],
+    "setupTestFrameworkScriptFile": "./src/__tests__/support/setupTestFramework"
   }
 }
