add api client calls

--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,4 @@ AWS_PROFILE=nonprod
 AWS_REGION=us-west-2
 FEATURE_MOODYS_HTTPS_PROXY=true
 OS_ENV=mac
+CLS_USERS_API_URL=https://q42bdofko1.execute-api.us-west-2.amazonaws.com/
