--- a/.env.development
+++ b/.env.development
@@ -8,6 +8,8 @@ CORS_ALLOWED_ORIGINS=http://localhost:8080,http://localhost:8000
 AWS_SECRETS_MANAGER_SECRETNAME=NonProdMetropolisCreds
 AWS_PROFILE=nonprod
 AWS_REGION=us-west-2
+AWS_EMAIL_CLIENT=https://email.us-west-2.amazonaws.com
 FEATURE_MOODYS_HTTPS_PROXY=true
 OS_ENV=mac
 CLS_USERS_API_URL=https://q42bdofko1.execute-api.us-west-2.amazonaws.com/
+MOODYS_CLS_EMAIL_ADDRESS=dev.patel@moodys.com
