--- a/package.json
+++ b/package.json
@@ -107,9 +107,9 @@
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.12.1",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-jest": "^21.15.0",
-    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.5.1",
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -140,7 +140,7 @@
     "postcss": "^6.0.16",
     "postcss-loader": "^2.0.9",
     "postcss-sass": "^0.2.0",
-    "prettier": "1.9.0",
+    "prettier": "^1.19.1",
     "prop-types": "^15.6.0",
     "pug-loader": "^2.3.0",
     "query-string": "^5.0.1",
